# Stake-Shift

./: .gitignore  README.md  stake-shift-specification.md
.github/workflows/: main.yml
app/: README.md  package-lock.json  package.json
app/Stake-Shift/: .gitignore
app/Stake-shift/: vite.config.ts
app/Stake-shift/frontend/: README.md  vercel.json  vite.config.ts
app/frontend/: README.md  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
app/program/: Anchor.toml  README.md  package.json
app/test-wallets/: test-stake.json
cli/scripts/: setup-local-validator.sh
hello-world/js/: package-lock.json
js/: client.mjs  package.json
new/bookkeeping/: Anchor.toml
new/bookkeeping/programs/bookkeeping/: Cargo.toml
new/bookkeeping/programs/bookkeeping/src/: lib.rs
new/splitwise_sol/: Anchor.toml
new/stakeshift/: Anchor.toml
new/tx_add/: Anchor.toml
offchain-agent/: delegator.js  package-lock.json  package.json  staker.js
oracle/: Cargo.toml
oracle/src/: main.rs
program/: Cargo.toml
resources/: ComponentDiagram.puml  README.md
resources/Diagrams/: ComponentDiagram.puml  UseCaseDiagram.puml
simple-staker/: Anchor.toml  package-lock.json  package.json
simple-staker/programs/simple-staker/: Cargo.toml
simple-staker/programs/simple-staker/src/: lib.rs
simple-staker/tests/: simple-staker.ts
stake-shift/stake-shift/: Cargo.toml  README.md
staking-program/: Anchor.toml  package.json
staking-program/tests/: staking-program.ts
ts-offchain/: README.md  package-lock.json  package.json  tx_matcher.ts
(+126 files in other folders)
