[package]
name = "simple-staker"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "simple_staker"

[dependencies]
subtle = "2.6.1"
anchor-lang = { git = "https://github.com/coral-xyz/anchor.git", features = ["init-if-needed"]}
anchor-spl = { git = "https://github.com/coral-xyz/anchor.git"}
solana-program = "2.1.0"

[features]
default = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

